...
          },
          icon: const Icon(Icons.close),
        ),
      ),
      actions: [
        TextButton(
          key: const ValueKey("SaveButton"),
          onPressed: () => _onSavePressed(context),
          child: Text(context.loc.buttonSave.toUpperCase()),
        ),
      ],
      elevation: 0,
      scrolledUnderElevation: 4,
...
          onPressed: () {
            logger.d("Selected Importance.none");
            notifier.importance = Importance.none;
          },
        ),
        MenuItemButton(
          key: const ValueKey('MenuItemButton_low'),
          child: Text.rich(
            style: Theme.of(context).textTheme.bodyLarge,
            createTextSpanWithImportance(
              importance: Importance.low,
              text: context.loc.importanceLow,
            ),
...
